11. Added rest adapters, and updated server port configuration and logging prompt
